# sample-app-aoai-chatGPT

./: app.py  new_start.sh  pyproject.toml  requirements-dev.txt  start.cmd
backend/funkagent/: agents.py
backend/history/: cosmosdbservice_async.py
backend/retriever/: AzureCognitiveSearchRetrieverWithFilter.py
frontend/: vite.config.ts
